# Magniphant

./: ALGORITHM_FIX_SUMMARY.md  PROJECT_GUIDE.md  QUICKSTART.md  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt  test_algorithm.py  test_preview.py  test_ui.py
.claude/: settings.local.json
core/: __init__.py  evm_core.py
doc/: README.md
ui/: __init__.py  evm_ui.py  frequency_analysis_dialog.py  integrated_preview.py  preview_window.py
